# embedded-from-scratch

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml
cmake/: arm-none-eabi-gcc.cmake  qemu_run.cmake
docs/: 00_toolchain.md  01_elf_format.md  02_assembly.md  03_linker_script.md  04_newlib_nano.md  05_freertos.md  06_qemu.md  07_cortex_m0_architecture.md  08_bootloader_design.md  09_i2c_spi_communication.md  10_adc_analog.md  11_qemu_limitations.md  README.md
lesson_01_bare_metal/: CMakeLists.txt  README.md
lesson_01_bare_metal/src/: main.c  startup.c
lesson_02_assembly/: CMakeLists.txt  README.md
lesson_02_assembly/src/: 01_registers_and_mov.S  02_memory_access.S  03_branch_and_loop.S  04_stack_and_call.S  05_exercises.S
lesson_03_c_asm_integration/: CMakeLists.txt  README.md
lesson_03_c_asm_integration/src/: asm_funcs.S  call_asm_from_c.c  inline_asm_demo.c  main.c  optimization_demo.c  startup.S
lesson_04_exceptions_interrupts/: CMakeLists.txt  README.md
lesson_04_exceptions_interrupts/linker/: microbit.ld
lesson_04_exceptions_interrupts/src/: hardfault_analyzer.c  main.c  pendsv_demo.c  semihosting.c  semihosting.h  startup.S  systick_demo.c
lesson_05_peripherals/: CMakeLists.txt  README.md
lesson_05_peripherals/inc/: nrf51_registers.h
lesson_05_peripherals/linker/: microbit.ld
lesson_05_peripherals/src/: console.c  console.h  gpio_driver.c  gpio_driver.h  main.c  semihosting.c  semihosting.h  startup.S  timer_driver.c  timer_driver.h  uart_driver.c  uart_driver.h
lesson_06_newlib/: CMakeLists.txt  README.md
lesson_06_newlib/linker/: microbit.ld
lesson_06_newlib/src/: main.c  semihosting.c  semihosting.h  startup.S  syscalls.c
lesson_07_freertos/: CMakeLists.txt  README.md
lesson_07_freertos/inc/: FreeRTOSConfig.h
lesson_07_freertos/src/: main.c  semihosting.c  semihosting.h  startup.S  syscalls.c  task_blinky.c  task_monitor.c  task_sensor.c
lesson_08_advanced/: CMakeLists.txt  README.md
lesson_08_advanced/src/: gdb_demo.c  low_power_demo.c  main.c  optimization_demo.c  production_demo.c  semihosting.c  semihosting.h  startup.S
lesson_09_bootloader/: CMakeLists.txt  README.md
lesson_09_bootloader/app/linker/: app.ld
lesson_09_bootloader/app/src/: main.c  startup_app.S
lesson_09_bootloader/bootloader/linker/: bootloader.ld
lesson_09_bootloader/bootloader/src/: main.c  startup.S
lesson_09_bootloader/scripts/: merge_firmware.cmake
lesson_10_watchdog/: CMakeLists.txt  README.md
lesson_10_watchdog/src/: main.c  semihosting.c  semihosting.h  startup.S  wdt_driver.c  wdt_driver.h
lesson_11_error_handling/: CMakeLists.txt  README.md
lesson_11_error_handling/linker/: microbit.ld
lesson_11_error_handling/src/: assert_impl.c  assert_impl.h  error_handler.c  error_handler.h  main.c  semihosting.c  semihosting.h  soft_crc.c  soft_crc.h  stack_guard.c  stack_guard.h  startup.S
lesson_12_patterns/: CMakeLists.txt  README.md
lesson_12_patterns/src/: bit_utils.c  bit_utils.h  cobs_framer.c  cobs_framer.h  main.c  ring_buffer.c  ring_buffer.h  state_machine.c  state_machine.h
lesson_13_interrupt_priority/: CMakeLists.txt  README.md
lesson_13_interrupt_priority/linker/: microbit.ld
lesson_13_interrupt_priority/src/: main.c  startup.S
scripts/: build.sh  debug.gdb  run_qemu.sh
